Fised layout bugs

--- a/src/client/components/Navigation/Topnav.less
+++ b/src/client/components/Navigation/Topnav.less
@@ -307,7 +307,7 @@
   }
 
   &__hot-news {
-    width: 400px;
+    //width: 400px;
   }
 
   &__hot-news-item {
