--- a/src/client/components/PopoverMenu/PopoverMenuItem.less
+++ b/src/client/components/PopoverMenu/PopoverMenuItem.less
@@ -4,11 +4,14 @@
 .PopoverMenuItem {
   height: 30px !important;
   text-transform: capitalize;
+  color: @black;
+  background: @white;
+  opacity: 1;
 
   & > a {
     font-size: 14px !important;
     font-weight: 500;
-    color: #99aab5 !important;
+    color: @black-text !important;
     height: 30px !important;
     line-height: 30px !important;
 
